# portfolio-compliance-tracker

./: README.md
portfolio-drift-compliance-tracker/: Makefile  config.py  input.json  main.py  original_input.json  pyproject.toml  test_injection.csv  test_portfolio.csv
portfolio-drift-compliance-tracker/playground_tests/: adversarial_injection_portfolio.json  compliant_portfolio.json  drifted_portfolio.json
portfolio-drift-compliance-tracker/src/: __init__.py  app.py  run_workflow.py  workflow.py
portfolio-drift-compliance-tracker/src/nodes/: drift_calculator.py
portfolio-drift-compliance-tracker/src/utils/: inspect_session.py  run_local_csv.py  run_payload.py  send_payload_request.py  send_resume_request.py
